tests/samples/negative/traits/trait_associated_type_missing_impl.ax
module trait_associated_type_missing_impl;

trait Source {
    type Item;
}

struct Bytes {
    value: i32;
}

impl Source for Bytes {
}

fn main() -> i32 {
    return 0;
}
